# house_prices

./: .flake8  .gitignore  INSTALL.md  TODO.md  logging.ini  main.py  pyproject.toml
config/schemas/: credentials.toml  queries.toml
data/queries/: nvf.sql
src/: aws_io.py  config.py  data.py  paths.py  preprocess.py
