[tool.poetry]
name = "dummy"
version = "0.1.0"
authors = ["Dummy Author <****@amazon.com>"]

[tool.poetry.dependencies]
# Pin exact Python version as it's not tracked in `poetry.lock`
python = "3.7.3"

Cerberus = "^1.3" # Schema validation
toml = "^0.10" # Parser for TOML files

[tool.poetry.dev-dependencies]
black = "^19.3b0" # Formatter
flake8 = "^3.7" # Linter
